			     BZFlag Release Notes
			     ====================

BZFlag 1.12.0  (was 1.11.x)
---------------------------

* Added 'options' section to world maps - Dave Rodgers
* Added the '-set <name> <value>' option - Dave Rodgers
* Throw away bad or early links in world files - Tim Riker
* Added Record/Replay feature - Dave Rodgers
* Added Random teleporter destinations - Dave Rodgers
* Added Lag bad flag - Dave Rodgers
* Poll to reset flags and Poll-cheating prevention - Ian Agar
* Flag and Tank Entry Zones - Dave Brosius
* Spawn improvements - Dave Brosius, Daniel Remenak
* Added MAC's Agility (aka Dodge) flag - Sean Morrison
* QuickTurn flag symbol changed from A to QT - Sean Morrison
* Added MAC's handicap game style - Sean Morrison
* Added ReverseControls bad flag - Sean Morrison
* Added Wings good flag - Dave Brosius
* Added BZDB variables to allow for more realistic friction - Nils McCarthy
* Added ForwardOnly and ReverseOnly bad flags - Sean Morrison
* No Jumping and Trigger Happy flags - Nils McCarthy
* server option to disallow autopilot - Nils McCarthy
* SDL interface to audio/video/input - Tupone Alfredo
* /clientquery (was CLIENTQUERY) moved to server - Daniel Remenak
* "Leave Game" menu item to leave a game without quitting - Daniel Remenak
* Allow user to force input device to that of their choosing - Daniel Remenak
* Tanks can drive over bumps - Dave Brosius
* Remove Building scene nodes laying on the ground (or lower) - Dave Brosius
* Rip out ref counted texture system, TM controls this now - Dave Brosius
* Added Admin Message Queue - Michael Hoffman


BZFlag 1.10.6  "the little hop"
-------------------------------

* Fixed the little hop on spawn at some sites - Alfredo Tupone
* Fixed issue of players add/removing others from groups - Alfredo Tupone
* Fixed false positive filter matches involving apostrophes - Sean Morrison
* Curing ghost/duplicated/ungetable flag - Alfredo Tupone
* Fixed 0 height flag, no more flags inside buildings - Alfredo Tupone